--- a/eshop/package.json
+++ b/eshop/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4"
   },
