--- a/eshop/package.json
+++ b/eshop/package.json
@@ -15,7 +15,8 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
-    "vue-axios": "^2.1.4"
+    "vue-axios": "^2.1.4",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
