--- a/eshop/package.json
+++ b/eshop/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.6",
     "sass-loader": "^7.1.0",
+    "vee-validate": "^2.1.5",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-loading-overlay": "^3.1.1",
@@ -55,7 +56,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.11.3",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
